# survync

./: .gitattributes  .gitignore  README.md  index.html
.github/workflows/: build.yml  pages.yml
files/: emi.json
files/config/: DistantHorizons.toml  carryon-common-1.toml.bak  carryon-common.toml  chunkloaders-common.toml  emi.css  iris.properties  lambdynlights.toml  packetfixer.properties  sodium-fingerprint.json
files/config/fabric/: indigo-renderer.properties
files/config/jade/: plugins.json
files/config/jei/: recipe-category-sort-order.ini
files/config/servercore/: config.yml
files/config/zombieawareness/: MobLists.toml
launcher/: build.py  config.sample.json  pyproject.toml  survync.spec
launcher/src/survync/: __init__.py  __main__.py  config.py  hasher.py  launcher.py  models.py  modrinth_api.py  network.py  profile_detector.py  sync_engine.py
launcher/src/survync/ui/: __init__.py  main_window.py  settings_dialog.py  styles.py  workers.py
launcher/tests/: test_config.py  test_hasher.py  test_models.py  test_sync_engine.py
site/: manifest.json  version.json
site/files/: emi.json
site/files/config/: DistantHorizons.toml  c2me.toml  carryon-common-1.toml.bak  carryon-common.toml  chunkloaders-common.toml  endermanoverhaul.jsonc  iris.properties  lambdynlights.toml  packetfixer.properties  resourceful-config-web.json  sodium-options.json
site/files/config/fabric/: indigo-renderer.properties
site/files/config/jade/: sort-order.json
site/files/mods/: lionfish_versions.json
tools/: generate_manifest.py  sync.ps1
(+6 files in other folders)
